front-envoy/files/front-envoy.yml
static_resources:
  listeners:
    - name: http-listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
        filter_chains:
          - filters:
              - name: envoy.filters.network.http_connection_manager
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: http_proxy
                  route_config:
                    name: all
                    virtual_hosts:
                      - name: ping
                        domains: [ '*' ]
                        routes:
                          - match: { prefix: "/" }
                            direct_response:
                              status: 200
                              body:
                                inline_string: "peepee"
